--- a/Wrestling/index.html
+++ b/Wrestling/index.html
@@ -12,7 +12,7 @@
             <h1>ECS Portfolio | Vincent Nguyen</h1>
          </div>
          <div class="nav">
-            <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="../Wrestling/index.html">Wrestling</a></h3>
+            <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="Wrestling/index.html">Wrestling</a></h3>
          </div>
          <div class="content">
             <p>Hello World!</p>
