--- a/Wrestling/index.html
+++ b/Wrestling/index.html
@@ -15,7 +15,14 @@
             <h3> <a href="../index.html">Home</a> | <a href="../ecs/index.html">ECS</a> | <a href="index.html">Wrestling</a></h3>
          </div>
          <div class="content">
+            <h1> Wrestling</h1>
+            <p> I got into wrestling because my cousins told me that I would really enjoy it throughout highschool, as I can get lots of exercise and make friends along the way.
+            I love the times when we got to wrestle eachother as it shows how far we have gotten with our skills. Wrestling is a contact sport that allows you to compete with people nation/world wide
+            and see how many people also have a big passion for such an amazing sport. </p>
+            <p> I have many interests when it come to wrestling, as I watch the professional wrestle i see that they are able to pull off crazy moves that I have never seen before. 
+            These guys that wrestle show how much our body can do and how we can use different technique to take a oppenent down.</p>
 
+            
 
 
             
