--- a/Wrestling/index.html
+++ b/Wrestling/index.html
@@ -22,7 +22,7 @@
             <p> I have many interests when it come to wrestling, as I watch the professional wrestle i see that they are able to pull off crazy moves that I have never seen before. 
             These guys that wrestle show how much our body can do and how we can use different technique to take a oppenent down.</p>
 
-            
+            <img src="images/wrestling_1.png" alt="wrestling" width="960" >
 
 
             
