--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,15 @@
             <h3> <a href="index.html">Home</a> | <a href="ecs/index.html">ECS</a> | <a href="Wrestling/index.html">Wrestling</a></h3>
          </div>
          <div class="content">
+
+          <h1> About Me</h1>
+          <h2> Things about me</h2>
+           <ul>
+             <li> I like to do wrestling as a sport</li>
+             <li> I like to play lots of games</li>
+             <li> I do very well academically and have a 4.0 GPA</li>
+             <li> I attend Skyline Highschool and I currtently as Freshman</li>
+           </ul>
     
          </div>
          <div class="footer">
