--- a/ecs/index.html
+++ b/ecs/index.html
@@ -21,6 +21,7 @@
                <li><a href="#">ECS Course Certification</a></li>
                <li><a href="#"typing.pdf">Typing Certification<a/></li>
             </ul>
+            <h3>Coding and Research Project</h3>
          </div>
          <div class="footer">
             <h4><a href="../aboutme.html">About Me</a>  | <a href="9608872@graniteschools.org">Contact</a> | Copyright 2021</h4>
