--- a/ecs/index.html
+++ b/ecs/index.html
@@ -22,6 +22,11 @@
                <li><a href="#"typing.pdf">Typing Certification<a/></li>
             </ul>
             <h3>Coding and Research Project</h3>
+            <ul>
+               <li> At Research Project:<a href="presentation.pptx">Emergeing Weapons: Laser Weapons</a> | <a href="presentation.pdf">PDF</a></li>
+               <li><a href="#">Project #2</a></li>
+               <li><a href="#">Project #3</a></li>
+            </ul>
          </div>
          <div class="footer">
             <h4><a href="../aboutme.html">About Me</a>  | <a href="9608872@graniteschools.org">Contact</a> | Copyright 2021</h4>
