--- a/ecs/index.html
+++ b/ecs/index.html
@@ -24,7 +24,7 @@
             <h3>Coding and Research Project</h3>
             <ul>
                <li> At Research Project:<a href="presentation.pptx">Emergeing Weapons: Laser Weapons</a> | <a href="presentation.pdf">PDF</a></li>
-               <li><a href="#">Project #2</a></li>
+               <li><a href="Final_project.zip">Final Coding Project #2</a></li>
                <li><a href="#">Project #3</a></li>
             </ul>
          </div>
