--- a/ecs/index.html
+++ b/ecs/index.html
@@ -18,8 +18,8 @@
             <h3>Course Certifications</h3>
             <ul>
                <li> <a href="#">Code.org HTML Course</a> </li>
-               <li><a href="#">ECS Course Certification</a></li>
-               <li><a href="#"typing.pdf">Typing Certification<a/></li>
+               <li><a href="computer.png">ECS Course Certification</a></li>
+               <li><a href="typing.pdf">Typing Certification<a/></li>
             </ul>
             <h3>Coding and Research Project</h3>
             <ul>
